minor style cleanup in SpeciesBaseStatRandomizer classes